<resources>
    <string name="app_name">Contatos de Emergência</string>
    <string name="welcome">Bem vindo!</string>
    <string name="user">Usuário</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="new_user">Novo Usuário</string>
    <string name="alter_data">Alterar Dados</string>
    <string name="name">Nome</string>
    <string name="keep_login">Manter Logado?</string>
    <string name="create">Criar</string>
    <string name="emergency_contactos">Contatos de Emergência</string>

</resources>