<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco"

    tools:context=".main.activities.ChecagemLogin_Activity">

    <LinearLayout
        android:id="@+id/LinearLayoutChecagem"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="100"
        android:background="@color/azulClaro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvMensagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="20"
            android:ems="10"
            android:gravity="center"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="@color/cinza"
            android:textColorLink="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edT_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="20"
            android:background="@color/branco"
            android:ems="10"
            android:hint="@string/user"
            android:inputType="textPersonName"
            android:autofillHints="username"
            android:textAlignment="textStart"
            android:textColor="@color/cinza"
            android:textColorLink="#FFFFFF"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edt_Pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="20"
            android:background="@color/branco"
            android:ems="10"
            android:hint="@string/password"
            android:autofillHints="password"
            android:inputType="text"
            android:textAlignment="textStart"
            android:textColor="@color/cinza"
            android:textColorLink="#FFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btLogar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="5"
            android:background="@color/laranja"
            android:text="@string/login"
            android:textColor="@color/cinza"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btNovo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="24dp"
            android:layout_weight="5"
            android:background="@color/laranja"
            android:text="@string/new_user"
            android:textColor="@color/cinza"
            android:textSize="18sp" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>