<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco"
    tools:context=".main.activities.PerfilUsuario_Activity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bnv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/activity_main_bottom_actions" />

    <LinearLayout
        android:id="@+id/LinearLayoutPerfil"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="120"
        android:background="@color/azulClaro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvMensagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/alter_data"
            android:textAlignment="center"
            android:textColor="@color/cinza"
            android:textColorLink="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_weight="20"/>

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/branco"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:textColor="@color/cinza"
            android:textColorLink="#FFFFFF"
            android:textSize="24sp"
            android:layout_margin="20dp"
            android:layout_weight="20" />

        <EditText
            android:id="@+id/edT_Login2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/branco"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/user"
            android:textColor="@color/cinza"
            android:textColorLink="#FFFFFF"
            android:textSize="24sp"
            android:layout_margin="20dp"
            android:layout_weight="20" />

        <EditText
            android:id="@+id/edt_Pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/branco"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/password"
            android:textAlignment="viewStart"
            android:textColor="@color/cinza"
            android:textColorLink="#FFFFFF"
            android:textSize="24sp"
            android:layout_margin="20dp"
            android:layout_weight="20"  />

        <Switch
            android:id="@+id/swLogado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:showText="false"
            android:text="@string/keep_login"
            android:textColor="@color/cinza"
            android:textOff="Não"
            android:textOn="Sim"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="5"  />

        <Button
            android:id="@+id/btCriar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/laranja"
            android:text="Modificar"
            android:textColor="@color/cinza"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="20dp"
            android:layout_weight="20"  />





    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

